<resources>
    <string name="app_name">Mono</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="nextText">Next</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_mobile_no">Email / Mobile No.</string>
    <string name="email_mobile_no1">Email / Mobile No.</string>
    <string name="password1">Password</string>
    <string name="passwordh">Password</string>
    <string name="keep_me_signed_in1">Keep me signed in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="app_logo">App Logo</string>
    <string name="fast_fresh_delivered">Fast..Fresh..Delivered</string>
    <string name="discount_title">Discount Title</string>
    <string name="enter_your_email_address_we_will_send_you_an_otp_for_verification_in_the_next_step">Enter your Email address. We will send you an OTP for verification in the next step.</string>
    <string name="email">Email</string>
    <string name="continueq">Continue →</string>
    <string name="or1">Or</string>
    <string name="try_using_mobile_number">Try using Mobile number</string>
    <string name="need_support_help">Need Support? Help</string>
    <string name="todo">TODO</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="my_cart">My Cart</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="my_cart12">My Cart</string>
    <string name="your_order">Your Order</string>
    <string name="_15_mins">15 mins</string>
    <string name="domino_s_pizza">Domino’s pizza</string>
    <string name="cheese_garlic_bread_x1_nrs_3900_nsize_medium_25_5_cm">Cheese Garlic Bread x1\nRs 3900\nSize: Medium (25.5 cm)</string>
    <string name="coke_fresh_x2_nrs_650_nsize_250_ml">Coke Fresh x2\nRs 650\nSize: 250 ml</string>
    <string name="add_more_items">Add More Items</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="item_total_rs_4550">Item total: Rs 4550</string>
    <string name="delivery_charges_rs_200">Delivery charges: Rs 200</string>
    <string name="restaurant_charges_rs_0">Restaurant charges: Rs 0</string>
    <string name="coupon_savings_rs_0">Coupon Savings: Rs 0</string>
    <string name="amount_to_pay_rs_4750">Amount to Pay: Rs 4750</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="you_haven_t_added_any_address">You haven’t added any address</string>
    <string name="add_address">Add Address</string>
    <string name="add_delivery_instructions">Add delivery instructions</string>
    <string name="food_must_not_contain_garlic">Food must not contain garlic.</string>
    <string name="tip_rs_10_rs_20_rs_30">Tip : Rs 10 / Rs 20 / Rs 30</string>
    <string name="pay_now">Pay Now</string>
    <string name="great_offers">Great Offers</string>
    <string name="nearby_restaurants">Nearby Restaurants</string>
    <string name="special_discounts">Special Discounts</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="i">TODO</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="sort">Sort</string>
    <string name="pizza_hut">Pizza Hut</string>
    <string name="_1_x_double_cheese_pizza_n1_x_cheesy_chicken_pizza">1 x Double Cheese Pizza\n1 x Cheesy Chicken Pizza</string>
    <string name="total_paid_rs_3900">Total Paid: Rs 3900</string>
    <string name="ordered_on_24_feb_2025_9_20_pm">Ordered on: 24 Feb 2025, 9:20 PM</string>
    <string name="delivered">Delivered</string>
    <string name="view_summary">View Summary</string>
    <string name="food_corner">Food Corner</string>
    <string name="_2_x_veg_grill_sandwich">2 x Veg. Grill Sandwich</string>
    <string name="total_paid_rs_422">Total Paid: Rs 422</string>
    <string name="ordered_on_20_feb_2025_8_01_pm">Ordered on: 20 Feb 2025, 8:01 PM</string>
    <string name="delivered1">Delivered</string>
    <string name="view_summary1">View Summary</string>
    <string name="back">Back</string>
    <string name="user_profile">User Profile</string>
    <string name="todo1">TODO</string>
    <string name="j_a_v_jayasingha">J.A.V Jayasingha</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile_info">Profile Info</string>
    <string name="address_book">Address Book</string>
    <string name="restaurant_and_food">Restaurant And Food</string>
    <string name="favourites">Favourites</string>
    <string name="payments">Payments</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="todo19">TODO</string>
    <string name="todo56">TODO</string>
    <string name="option_name">Option Name</string>
    <string name="offer_name">Offer Name</string>
    <string name="sucess">sucess</string>
    <string name="your_password_has_been_reset_successfully">Your password has been reset successfully!</string>
    <string name="return_to_sign_in">Return to Sign In</string>
    <string name="if_you_did_not_request_this_change_please_contact_support">If you did not request this change, please contact support.</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email12">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="sign_up12">Sign Up</string>
    <string name="or12">Or</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
</resources>