<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/custom_green"
        android:layout_marginBottom="16dp"/>

    <!-- Username Label and Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <!-- Email Label and Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email12"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"
        android:gravity="start"/>

    <EditText
        android:id="@+id/emailInputSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <!-- Password Label and Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"
        android:gravity="start"/>

    <EditText
        android:id="@+id/passwordInputSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <!-- Terms CheckBox -->
    <CheckBox
        android:id="@+id/termsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_to_the_terms_and_conditions"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up12"
        android:backgroundTint="@color/custom_green"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="8dp"/>

    <!-- Or text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or12"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

    <!-- Social Login Options -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/face"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/goog"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/tweet"/>
    </LinearLayout>

    <!-- Sign In Text -->
    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/custom_green"/>

</LinearLayout>
