<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true"
    android:background="@color/white"
    android:layout_marginTop="40sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_cart"
                android:fontFamily="@font/rbc"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/rb"
                android:text="Venura Jayasingha"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/top_right_icon"
                app:layout_constraintTop_toTopOf="@id/top_right_icon"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/top_right_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/profile_icon"
                android:src="@drawable/ic_profile" />
        </LinearLayout>

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_cart12"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:gravity="center" />

        <!-- Cart Items Container -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/white"
                >

                <!-- Order Details -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_order"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15_mins"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_green_light"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/domino_s_pizza"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese_garlic_bread_x1_nrs_3900_nsize_medium_25_5_cm"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coke_fresh_x2_nrs_650_nsize_250_ml"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="16dp" />

                <!-- Buttons -->
                <Button
                    android:id="@+id/add_more_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_more_items"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/apply_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_coupon"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Bill Summary -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/white"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_summary"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_total_rs_4550"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_charges_rs_200"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_charges_rs_0"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_savings_rs_0"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_to_pay_rs_4750"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Delivery Details -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_haven_t_added_any_address"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/add_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_address"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_delivery_instructions"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_must_not_contain_garlic"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="16dp" />

                <!-- Tip -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_rs_10_rs_20_rs_30"
                    android:textSize="18sp"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/pay_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_now"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:layout_marginTop="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
